BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/EsitoCampagna__mdt.object-meta.xml
<CustomObject>
    <label>Esito Campagna</label>
    <pluralLabel>Esiti Campagna</pluralLabel>
</CustomObject>