BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/CampaignType__c.field-meta.xml
<CustomField>
    <fullName>CampaignType__c</fullName>
    <label>Tipo di Campagna</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commerciale</fullName>
                <default>true</default>
                <label>Commerciale</label>
            </value>
            <value>
                <fullName>Gestionale</fullName>
            </value>
            <value>
                <fullName>Relazionale</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>