BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/CanaleFase2__c.field-meta.xml
<CustomField>
    <fullName>CanaleFase2__c</fullName>
    <label>Canale fase 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rete</fullName>
                <default>true</default>
                <label>Rete</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>