BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Center</fullName>
                <default>true</default>
                <label>Contact Center</label>
            </value>
            <value>
                <fullName>Rete</fullName>
            </value>
            <value>
                <fullName>CCPRRETE</fullName>
                <label>Contact Center/Rete</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>