BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/ChannelAvailability__c.field-meta.xml
<CustomField>
    <fullName>ChannelAvailability__c</fullName>
    <label>Disponibilità canale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Rete</fullName>
            </value>
            <value>
                <fullName>Contact Center;Rete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>