BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/CRM_OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>CRM_OpportunityStage__c</fullName>
    <label>Fase opportunità</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Da contattare</fullName>
                <default>true</default>
                <label>Da contattare</label>
            </value>
            <value>
                <fullName>Non risponde 1</fullName>
            </value>
            <value>
                <fullName>Non risponde 2</fullName>
            </value>
            <value>
                <fullName>Non risponde 3</fullName>
            </value>
            <value>
                <fullName>Non raggiungibile</fullName>
            </value>
            <value>
                <fullName>In corso</fullName>
            </value>
            <value>
                <fullName>Accettata</fullName>
            </value>
            <value>
                <fullName>Rifiutata</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Inviata Filiale</fullName>
                <isActive>false</isActive>
                <label>Inviata Filiale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>