BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/HasResponded__c.field-meta.xml
<CustomField>
    <fullName>HasResponded__c</fullName>
    <label>Cliente ha risposto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Sì</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>