BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/NomeEsitazione__c.field-meta.xml
<CustomField>
    <fullName>NomeEsitazione__c</fullName>
    <label>Nome Esitazione</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>