BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/OwnerSystem__c.field-meta.xml
<CustomField>
    <fullName>OwnerSystem__c</fullName>
    <label>Sistema Owner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Siebel</fullName>
                <default>true</default>
                <label>Siebel</label>
            </value>
            <value>
                <fullName>FSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>