BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/SottotipologiaCampagna__c.field-meta.xml
<CustomField>
    <fullName>SottotipologiaCampagna__c</fullName>
    <label>Sottotipologia Campagna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campagna</fullName>
                <default>true</default>
                <label>Campagna</label>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Altra proposta</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>