BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/TipoCampagnaCC__c.field-meta.xml
<CustomField>
    <fullName>TipoCampagnaCC__c</fullName>
    <label>Tipo Campagna CC</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <default>true</default>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>