BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/TipoEsitazione__c.field-meta.xml
<CustomField>
    <fullName>TipoEsitazione__c</fullName>
    <label>Tipo Esitazione</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Esito Transitorio</fullName>
                <default>true</default>
                <label>Esito Transitorio</label>
            </value>
            <value>
                <fullName>Esito Negativo</fullName>
            </value>
            <value>
                <fullName>Esito Positivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>