BPER/DEVF/force-app/main/default/objects/EsitoCampagna__mdt/fields/TipologiaStep__c.field-meta.xml
<CustomField>
    <fullName>TipologiaStep__c</fullName>
    <label>Tipologia step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monostep</fullName>
                <default>true</default>
                <label>Monostep</label>
            </value>
            <value>
                <fullName>Multistep</fullName>
            </value>
            <value>
                <fullName>Lista di servizio</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>